--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "recharts": "^3.6.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
